<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="name"
            type="String" />
        <variable
            name="highestTemp"
            type="String" />
        <variable
            name="lowestTemp"
            type="String" />
        <variable
            name="humidity"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="@dimen/small_12"
        android:background="@drawable/card">

        <TextView
            android:id="@+id/day_name"
            style="@style/Light_Text"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_12"
            android:textAlignment="center"
            android:textSize="@dimen/small_text_12"
            android:text="@{name}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/day" />

        <ImageView
            android:id="@+id/weather_state_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/day_name"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/cloud" />

        <View
            android:id="@+id/view"
            style="@style/Divider"
            android:layout_margin="@dimen/small_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/weather_state_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/water_drop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/high_low"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/high_low"
            app:layout_constraintTop_toBottomOf="@+id/high_low" />

        <TextView
            android:id="@+id/high_low"
            style="@style/Bold_white_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_12"
            android:text="@string/high_low_weather"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/weather_high_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_text_12"
            android:text="@{highestTemp+lowestTemp}"
            app:layout_constraintBottom_toBottomOf="@+id/high_low"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/high_low"
            app:layout_constraintTop_toTopOf="@+id/high_low"
            tools:text="@string/high_low" />

        <TextView
            android:id="@+id/day_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_text_12"
            android:text="@{humidity}"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/weather_high_low"
            app:layout_constraintStart_toStartOf="@+id/weather_high_low"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            tools:text="@string/wind_speed" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>