<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.weatherwizard.ui.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        tools:context=".ui.Home">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/large_40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@{viewModel.homeData.time}"
            tools:text="@string/time" />

        <ImageButton
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/medium_24"
            android:layout_marginEnd="@dimen/medium_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="6dp"
            android:src="@drawable/search_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time"
            android:text="@{viewModel.homeData.cityName}"
            tools:text="@string/city" />


        <TextView
            android:id="@+id/weather_degree"
            style="@style/Extra_Light_Text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_16"
            android:layout_marginTop="@dimen/large_32"
            android:textAlignment="center"
            android:textSize="60sp"
            android:text="@{viewModel.homeData.temperature}"
            app:layout_constraintEnd_toStartOf="@+id/weather_icon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city"
            tools:text="@string/weather_f" />

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="64dp"
            android:layout_height="54dp"
            android:layout_marginEnd="@dimen/medium_16"
            app:layout_constraintBottom_toBottomOf="@+id/weather_degree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/weather_degree"
            app:layout_constraintTop_toTopOf="@+id/weather_degree"
            tools:src="@drawable/cloud" />

        <TextView
            android:id="@+id/weather_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_degree"
            android:text="@{viewModel.homeData.condition}"
            tools:text="@string/weather_state" />

        <LinearLayout
            android:id="@+id/current_box"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="@dimen/small_12"
            android:background="@drawable/card"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/card1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_status"
            app:layout_constraintVertical_bias="0.3">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/medium_24"
                android:src="@drawable/water_drop" />

            <TextView
                android:id="@+id/current_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/medium_24"
                android:textSize="@dimen/small_text_12"
                android:text="@{viewModel.homeData.humidityPercentage}"
                tools:text="@string/humidity" />

            <View
                style="@style/Divider"
                android:layout_gravity="center" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/medium_24"
                android:src="@drawable/wind_icon" />

            <TextView
                android:id="@+id/current_windSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/medium_24"
                android:textSize="@dimen/small_text_12"
                android:text="@{viewModel.homeData.windSpeed}"
                tools:text="@string/wind_speed" />

            <View
                style="@style/Divider"
                android:layout_gravity="center" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/reload_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/medium_24"
                android:background="@drawable/round_button"
                android:padding="@dimen/small_12"
                android:src="@drawable/reload_icon" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_12"
            android:text="@{viewModel.homeData.lastUpdated}"
            android:textSize="@dimen/small_text_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_box" />

        <include
            android:id="@+id/card1"
            layout="@layout/weather_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_12"
            app:dayName="@{viewModel.comingDays.get(0).dayName}"
            app:highestTemp="@{viewModel.comingDays.get(0).temperatureHighest}"
            app:lowestTemp="@{viewModel.comingDays.get(0).temperatureLowest}"
            app:humidity="@{viewModel.comingDays.get(0).avgHumidity}"
            app:layout_constraintBottom_toTopOf="@+id/card2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            android:id="@+id/card2"
            layout="@layout/weather_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_12"
            app:dayName="@{viewModel.comingDays.get(1).dayName}"
            app:highestTemp="@{viewModel.comingDays.get(1).temperatureHighest}"
            app:lowestTemp="@{viewModel.comingDays.get(1).temperatureLowest}"
            app:humidity="@{viewModel.comingDays.get(1).avgHumidity}"
            app:layout_constraintBottom_toTopOf="@id/card3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            android:id="@+id/card3"
            layout="@layout/weather_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_12"
            app:dayName="@{viewModel.comingDays.get(2).dayName}"
            app:highestTemp="@{viewModel.comingDays.get(2).temperatureHighest}"
            app:lowestTemp="@{viewModel.comingDays.get(2).temperatureLowest}"
            app:humidity="@{viewModel.comingDays.get(2).avgHumidity}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
